# ai-ops-environment-meta-

./: .deployignore  BENCHMARK.md  CONTRIBUTING.md  README.md  __init__.py  app.py  baseline.py  client.py  environment.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  state.py  tasks.py
agent/: rl_agent_stub.py
agents/: rules_agent.py
ai-ops-env/: Dockerfile  environment.py
ai_ops_env/: RL_agent.py  environment.py  grader.py  inference.py  models.py  state.py  tasks.py
ai_ops_environment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
configs/: settings.py
core/: decision_engine.py  reward_engine.py
docs/: architecture.md  design.md
evaluation/: evaluator.py  metrics.py
server/: README.md  app.py
tasks/: scenarios.md
templates/: index.html
tests/: test_environment.py
utils/: helpers.py  logger.py
