[project]
name = "ai-ops-environment"
version = "0.1.0"
description = "AI Ops OpenEnv Environment for task prioritization"
authors = [
    { name = "Ganesh" }
]
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_ops_env"]
